--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
         <section id='paisagem'>
-            <iframe scrolling="no" src='home.html' id='quadro' name='quadro'> </iframe>
+            <iframe  src='home.html' id='quadro' name='quadro'> </iframe>
         </section>
 
     </main>
