--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imersão Dev</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
@@ -17,11 +18,16 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1> Imersão dev </h1>
         <p> Projetos desenvolvidos no evento da <a target='_blank' href='https://www.alura.com.br'>Alura</a> </p>
-        <nav>
+
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()" >
+            menu
+            </span>
+
+        <nav id="nav">
 
             <a class='botao' href='home.html' target='quadro'>Home </a>
 
@@ -51,7 +57,28 @@
         </section>
 
     </main>
+    <script>
+        function clickMenu(){
+           if(nav.style.display === 'block'){
+            nav.style.display = 'none'
+           }
+           else{
+            nav.style.display = 'block'
+           }
+
+        }
+        function mudouTamanho(){
+            if(widow.innerwidth >=768){
+                itens.style.display = 'block'
+
+            }
+            else{
+                itens.style.display= 'none'
+            }
+        }
+    </script>
 
 </body>
+
 
 </html>
