--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body onresize="mudouTamanho()">
+<body>
     <header>
         <h1> Imersão dev </h1>
         <p> Projetos desenvolvidos no evento da <a target='_blank' href='https://www.alura.com.br'>Alura</a> </p>
@@ -29,21 +29,21 @@
 
         <nav id="nav">
 
-            <a class='botao' href='home.html' target='quadro'>Home </a>
+            <a class='botao' href='home.html' target='quadro' onclick="ClickButton()">Home </a>
 
 
-            <a class='botao' href='https://w-wag.github.io/imersaoDev-ConversorDeMoedas/' target='quadro'>Conversor de
+            <a class='botao' href='https://w-wag.github.io/imersaoDev-ConversorDeMoedas/' target='quadro' onclick="ClickButton()">Conversor de
                 moedas </a>
 
 
-            <a class='botao' href='https://w-wag.github.io/imersaoDev-Mentalista/' target='quadro'>Mentalista </a>
+            <a class='botao' href='https://w-wag.github.io/imersaoDev-Mentalista/' target='quadro' onclick="ClickButton()">Mentalista </a>
 
 
 
-            <a class='botao' href='https://w-wag.github.io/imersaoDev-Aluraflix/' target='quadro'>Aluraflix </a>
+            <a class='botao' href='https://w-wag.github.io/imersaoDev-Aluraflix/' target='quadro' onclick="ClickButton()">Aluraflix </a>
 
 
-            <a class='botao' href='https://w-wag.github.io/imersaoDev-TabelaDeClassificacao/' target='quadro'>Tabela
+            <a class='botao' href='https://w-wag.github.io/imersaoDev-TabelaDeClassificacao/' target='quadro' onclick="ClickButton()">Tabela
             </a>
 
 
@@ -67,14 +67,13 @@
            }
 
         }
-        function mudouTamanho(){
-            if(widow.innerwidth >=768){
-                itens.style.display = 'block'
-
-            }
-            else{
-                itens.style.display= 'none'
-            }
+        function ClickButton(){
+            if(nav.style.display === 'block'){
+            nav.style.display = 'none'
+           }
+           else{
+            nav.style.display = 'block'
+           }
         }
     </script>
 
