corrigindo problema no botão tabela

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class='botao' href='https://w-wag.github.io/imersaoDev-Aluraflix/' target='quadro' onclick="clickMenu()">Aluraflix </a>
 
 
-            <a class='botao' href='https://w-wag.github.io/imersaoDev-TabelaDeClassificacao/' target='quadro' onclick="ClickButton()">Tabela
+            <a class='botao' href='https://w-wag.github.io/imersaoDev-TabelaDeClassificacao/' target='quadro' onclick="clickMenu()">Tabela
             </a>
 
 
